--- a/Python/UDEMY_CODEACDMY/notebooks/03_data_types_and_operations.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/03_data_types_and_operations.ipynb
@@ -158,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "'''Date time class and object  \n",
