--- a/Python/UDEMY_CODEACDMY/notebooks/01-fileman_functions_packages.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/01-fileman_functions_packages.ipynb
@@ -4,6 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Fixing Working directory and making changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\sumad.singh\\\\Documents\\\\DS\\\\Python\\\\UDEMY_CODEACDMY\\\\notebooks'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "# To get curent working directory\n",
+    "os.getcwd()\n",
+    "# Note the use of double backslashes in specifying path in jupytetr\n",
+    "# To change working directory\n",
+    "#os.chdir(\"C:\\\\Users\\\\ssioj\\\\Documents\\\\External Learning\\\\Udemy Python\")\n",
+    "#os.chdir(\"C:\\\\Users\\\\ssioj\\\\Documents\\\\Fractal docs\\\\R Training\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Function and packages\n",
     "Common used functions in Python   \n",
     "range, list,type,len,max, min  \n",
