--- a/Python/UDEMY_CODEACDMY/notebooks/08-DS_list_array_matrix_operations.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/08-DS_list_array_matrix_operations.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "salary_1= Salary[:,Pdict[\"KobeBryant\"]] # gives an array object\n",
@@ -106,6 +108,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Operations with Lists\n",
+    "Lists can have data of multiple data types, so arithmetic operation, logical operations are not\n",
+    "applicable to lists"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -162,6 +173,19 @@
     "# Division Operation\n",
     "#salary_div_list =salary_yr1/salary_yr2\n",
     "# This will throw an error as operation is not supported on lists, same for \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Boolean operations are not supported as well\n",
+    "z = [1,2,3]\n",
+    "# z < 2 will throw an error"
    ]
   }
  ],
