--- a/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/02_data_types_and_operations.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -32,6 +32,7 @@
      "output_type": "stream",
      "text": [
       "8\n",
+      "2\n",
       "4.69\n",
       "2.0\n"
      ]
@@ -42,7 +43,7 @@
        "bool"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,6 +60,7 @@
     "G=F/E # returns quotient , F//E returns floored value of quotient , F % E returns remainder  \n",
     "pow(F,E) #or \n",
     "F ** E #is F exponential to E.   \n",
+    "print(B%A) # modulus operator to get remainder\n",
     "print (F)  \n",
     "print (G) # Using print () function lets you print multiple output together  \n",
     "#Python 2.7 requires print to be used as print G  \n",
@@ -101,58 +103,144 @@
     "# Logical operations\n",
     "'#==,!= or <>'  for comparison  \n",
     "'#>,< ,<=,>='  \n",
-    "'# and, or, not' are logical operators, unlike &,| in R  \n",
-    "\n",
-    "# Operations on strings\n",
+    "'# and, or, not' are boolean operators, unlike &,| in R  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operations on strings\n",
     "i=\"I\"  \n",
     "l=\"Love You\"  \n",
     "i+\" \"+l  \n",
     "\n",
-    "'''The statements in python need not be separated by , or ;\n",
-    "Indexing Strings to get a character  '''\n",
+    "'''The statements in python need not be separated by , or ;'''\n",
+    "\n",
+    "### Indexing Strings to get a character  \n",
     "x=\"Monday\"  \n",
     "x[4]  \n",
     "\n",
-    "'''Converting to string data type, case conversion  \n",
-    "Function str() can be used to convert a data type into string  \n",
-    "An object with string data type, can use methods upper() and lower() for case conversion  \n",
-    "'''\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting to string data type, case conversion  \n",
+    "Function str() can be used to convert a data type into string  \n",
+    "\n",
+    "An object with string data type, can use methods upper() and lower() for case conversion  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String Formatting\n",
     "'''Printing a string with variable names  \n",
     "Use %s,and then specify variables using %().  \n",
-    "'''\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is sumad\n",
+      "The newline \n",
+      " will expand\n"
+     ]
+    }
+   ],
+   "source": [
     "name=\"sumad\"  \n",
-    "print (\"My name is %s\" %name)  \n",
+    "print (\"My name is %s\" %(name))  \n",
     "\n",
     "'''Escape characters : characters that cannot be printed  \n",
     " Use of escape characters like \\n , \\t ,\\scan work in strings'''   \n",
     "\n",
-    "print ('The newline \\n will expand')     \n",
-    "\n",
+    "print ('The newline \\n will expand')     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i'll be back\n",
+      "My name is \tSumad\n"
+     ]
+    }
+   ],
+   "source": [
     "# Use of an ' needs a \\   '''   \n",
     "print ('i\\'ll be back')  \n",
     "a='Sumad'  \n",
     "b='Singh'  \n",
-    "print ('My name is \\t' + a )  \n",
-    "\n",
-    "'''Strings can be accessed using indexing methods used for lists,Strings are immutable through  \n",
-    "Strings can be compared with the standard operators listed above: ==, !=, <, >, <=, and >=.  \n",
-    "'''\n",
-    "\n",
+    "print ('My name is \\t' + a )  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strings can be accessed using indexing methods used for lists,Strings are immutable through  \n",
+    "Strings can be compared with the standard operators listed above: ==, !=, <, >, <=, and >=.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "x='Sumad Singh'  \n",
     "y='Sumad'  \n",
-    "x!=y \n",
-    "\n",
-    "'''in and not in can be used to test string membership i.e if a charcter exists in a string  \n",
-    "String Functions/methods  \n",
+    "x!=y "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in and not in can be used to test string membership i.e if a charcter exists in a string  \n",
+    "String Functions/methods that are available from an object that is string\n",
     "Join(), lower(), upper(),find(),split(),startWith(),endsWith(),count() can be used  \n",
-    "http://www.tutorialspoint.com/python/python_strings.htm  \n",
-    "'''\n",
-    "\n",
-    "'''String formatting using operator %  \n",
+    "http://www.tutorialspoint.com/python/python_strings.htm  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "String formatting using operator %  \n",
     "Like %s was used to print variables that were of string data type,  \n",
-    "%c, %i,%d ,%ecan be used to print charcter, interger and decimal data and exponential notation  \n",
-    "'''\n"
+    "%c, %i,%d ,%e can be used to print charcter, interger and decimal data and exponential notation  "
    ]
   },
   {
@@ -180,13 +268,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Boolean Operators \n",
+    "and, or, not \n",
+    "not, and, or are evaluated in this order, units in parentheses are solved first"
+   ]
   }
  ],
  "metadata": {
@@ -205,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
