--- a/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/10-Functions_Argument_Unpacking.ipynb
@@ -7,6 +7,9 @@
     "### Functions in Python\n",
     "•\tDefine using def keyword  \n",
     "•\tMust have a return statement to return a value  \n",
+    "\n",
+    "Function has parameters, which are variables that take values when function is called.  \n",
+    "When function is called it is called with 'arguments' i.e values to be passed to the parameters  \n",
     "Example:  \n",
     "def cube (x):  \n",
     "    y=x * x * x  \n",
@@ -19,7 +22,7 @@
    "source": [
     "#### Passing arbitrary arguments to functions\n",
     "Arbitrary arguments can be passed into a function by defining a tuple and dictionary in the arguments.  \n",
-    "Tuple name should have a * and dictionary name should have a **. Tuple and dictionary declarations  \n",
+    "Tuple name should have a single star and dictionary name should have double stars. Tuple and dictionary declarations  \n",
     "must follow the formal arguments, and tuple should preceed dictionary."
    ]
   },
@@ -145,6 +148,105 @@
     "d = {\"voltage\": \"four million\", \"state\": \"bleedin' demised\", \"action\": \"VOOM\"}\n",
     "parrot(**d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Function to find abs value, if the argument is numeric\n",
+    "def distance_from_zero (s):\n",
+    "  if type(s) in [int, float]:\n",
+    "    return(abs(s))\n",
+    "  else:\n",
+    "    return (\"Nope\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance_from_zero (5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions calling functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1955\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hotel_cost(nights):\n",
+    "  return (140*nights)\n",
+    "\n",
+    "def plane_ride_cost(city):\n",
+    "  if city == \"Charlotte\":\n",
+    "    return (183)\n",
+    "  elif city == \"Tampa\":\n",
+    "    return (220)\n",
+    "  elif city == \"Pittsburgh\":\n",
+    "    return (222)\n",
+    "  elif city == \"Los Angeles\":\n",
+    "    return (475)\n",
+    "  else:\n",
+    "    return (\"Not a valid city\")\n",
+    "  \n",
+    "def rental_car_cost(days):\n",
+    "  if days >= 7:\n",
+    "    return (days * 40 - 50)\n",
+    "  elif days >=3:\n",
+    "    return (days * 40 - 20)\n",
+    "  else:\n",
+    "    return (days * 40)\n",
+    "  \n",
+    "def trip_cost(city, days, spending_money):\n",
+    "  return(rental_car_cost(days) +\n",
+    "         plane_ride_cost(city) +\n",
+    "         hotel_cost(days) +\n",
+    "        spending_money)\n",
+    "\n",
+    "print(trip_cost(\"Los Angeles\", 5, 600))\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -163,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
