--- a/Python/UDEMY_CODEACDMY/notebooks/14-Conditonal_Statements.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/14-Conditonal_Statements.ipynb
@@ -239,7 +239,8 @@
     "        execute code\n",
     "    else:\n",
     "        execute code\n",
-    "'''        \n",
+    "'''       \n",
+    "# else does not require an evaluation of true/false condition\n",
     "#see the indentation, if and else need to be at same level of indentation\n",
     "# numpy is a library in python having functions for scientific calculations\n",
     "# Example of nested if else, \n",
@@ -282,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
