--- a/Python/UDEMY_CODEACDMY/notebooks/01-fileman_functions_packages.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/01-fileman_functions_packages.ipynb
@@ -59,7 +59,9 @@
     "2. Install package : Using anaconda command prompt for anaconda distributions of python  \n",
     "    - conda install <> or pip install <>  \n",
     "3. import package or just import specific functions    \n",
-    " use -  from <package name> import <function name>  \n"
+    " use -  from <package name> import <function name>   \n",
+    " could use - from <package name> import * to import all modules, and access methods without use of package.<method>  \n",
+    " but it can cause confusion about where a method comes from\n"
    ]
   },
   {
@@ -171,6 +173,41 @@
     "#or to see help for a package\n",
     "#Eg: help(math)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see the methods and variables available in a package or a module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'pi', 'pow', 'radians', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math # Imports the math module\n",
+    "everything = dir(math) # Sets everything to a list of things from math\n",
+    "print (everything) # Prints 'em all!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -189,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
