--- a/Python/UDEMY_CODEACDMY/notebooks/12-Classes_Modules_Inheritance.ipynb
+++ b/Python/UDEMY_CODEACDMY/notebooks/12-Classes_Modules_Inheritance.ipynb
@@ -7,7 +7,7 @@
     "### Classes and Modules\n",
     "\n",
     "\n",
-    "Class is defined like a function but with the keyword class.  \n",
+    "Class is defined like a function but with the keyword class and not def.  \n",
     "Each method in the class has first argument as self, for self reference.  \n",
     "Methods starting with __init__ are initiated when an object of the class is first created.  \n",
     "Methods starting with __str__ are used when string representation of the class is needed.\n",
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Example : Make a class for vehcilce, with attributes as\n",
@@ -206,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class sedan(vehicle):\n",
@@ -234,7 +238,9 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a sedan vehcile\n",
@@ -357,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
